Changes on column space

--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -71,7 +71,7 @@
       style="display: grid;
              grid-auto-columns: auto;
              grid-template-columns: 33.33%;
-             grid-column-gap: 2em;
+             grid-column-gap: 1em;
              padding-left: 30px;
              padding-right: 30px;">
 
@@ -92,7 +92,7 @@
         <p class="custom-colonphon"
            style="line-height: 14px;">
           <a href="https://neticaweb.com"
-             style="color: #000; font-family: 'Poppins'; font-size: 14px;">
+             style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
              Acerca de </a><br>
           <a href="https://neticaweb.com"
              style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
@@ -125,19 +125,19 @@
          <div class="col-lg-4" style="grid-column: 1; margin-left: 1em;">
 		         <p style="line-height: 16px;">
                   <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; font-weight: 500; line-height: 16px;">
+                     style="color: #000; font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 14px;">
                      Preescolar </a><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; line-height: 16px;">
+                     style="color: #000; font-family: 'Poppins', sans-serif; font-weight: 500; margin-left: 2.5em; font-size: 14px;">
                      Robótica </a><br><br><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; line-height: 16px;">
+                     style="color: #000; font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 14px;">
                      Primaria inicial </a><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; line-height: 16px;">
+                     style="color: #000; font-family: 'Poppins', sans-serif; font-weight: 500; margin-left: 2.5em; font-size: 14px;">
                      Robótica </a><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; line-height: 16px;">
+                     style="color: #000; font-family: 'Poppins', sans-serif; font-weight: 500; margin-left: 2.5em; font-size: 14px;">
                      Programación </a>
 		         </p>
 	       </div>
@@ -145,22 +145,22 @@
          <div class="col-lg-8" style="grid-column: 2;">
 		         <p style="line-height: 16px;">
                   <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; line-height: 16px;">
+                     style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
                      Primaria intermedia </a><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; line-height: 16px;">
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; font-size: 14px;">
                      Robótica </a><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; line-height: 16px;">
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; font-size: 14px;">
                      Programación </a><br><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; line-height: 16px;">
+                     style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
                      Secundaria / Bachillerato </a><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; line-height: 16px;">
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; font-size: 14px;">
                      Robótica </a><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; line-height: 16px;">
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; font-size: 14px;">
                      Programación </a>
 		         </p>
 	      </div>
