Added facebook icon to fotter and links

--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -41,21 +41,27 @@
         </p>
         <p class="custom-colonphon"
            style="line-height: 14px;">
-          <a href="https://neticaweb.com"
+          <a href="https://www.neticaweb.com/sobre-nosotros/"
              style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
              Acerca de </a><br>
-          <a href="https://neticaweb.com"
+          <a href="https://www.neticaweb.com/contacto/"
              style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
              Contacto </a><br>
-          <a href="https://neticaweb.com"
+          <a href="https://www.neticaweb.com/#noticias"
              style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
              Noticias </a><br>
-          <a href="https://neticaweb.com"
+          <a href="https://www.neticaweb.com/politica-de-privacidad/"
              style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
              Política de privacidad </a><br>
-          <a href="https://neticaweb.com"
+          <a href="https://www.neticaweb.com/#"
              style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
              Derechos de autor </a>
+        </p>
+        <p>
+          <a href="https://www.facebook.com/NeticaRobotica/">
+            <img src="${static.url("images/facebook.png")}" alt="NeticaRobotics"
+                 style="max-width: 100%; height: auto; padding-top: 20px;"/>
+          </a>
         </p>
       </div>
 
@@ -74,19 +80,19 @@
 
          <div class="col-lg-4" style="grid-column: 1; margin-left: 1em;">
 		         <p style="line-height: 16px;">
-                  <a href="#"
+                  <a href="https://www.neticaweb.com/preescolar/"
                      style="color: #000; font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 14px;">
                      Preescolar </a><br>
-			            <a href="#"
+			            <a href="https://www.neticaweb.com/preescolar/#robotica"
                      style="color: #000; font-family: 'Poppins', sans-serif; font-weight: 500; margin-left: 2.5em; font-size: 14px;">
                      Robótica </a><br><br><br>
-			            <a href="#"
+			            <a href="https://www.neticaweb.com/primaria-inicial/"
                      style="color: #000; font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 14px;">
                      Primaria inicial </a><br>
-			            <a href="#"
+			            <a href="https://www.neticaweb.com/primaria-inicial/#robotica"
                      style="color: #000; font-family: 'Poppins', sans-serif; font-weight: 500; margin-left: 2.5em; font-size: 14px;">
                      Robótica </a><br>
-			            <a href="#"
+			            <a href="https://www.neticaweb.com/primaria-inicial/#programacion"
                      style="color: #000; font-family: 'Poppins', sans-serif; font-weight: 500; margin-left: 2.5em; font-size: 14px;">
                      Programación </a>
 		         </p>
@@ -94,22 +100,22 @@
 
          <div class="col-lg-8" style="grid-column: 2;">
 		         <p style="line-height: 16px;">
-                  <a href="#"
+                  <a href="https://www.neticaweb.com/primaria-intermedia/"
                      style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
                      Primaria intermedia </a><br>
-			            <a href="#"
+			            <a href="https://www.neticaweb.com/primaria-intermedia/#robotica"
                      style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; font-size: 14px;">
                      Robótica </a><br>
-			            <a href="#"
+			            <a href="https://www.neticaweb.com/primaria-intermedia/#programacion"
                      style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; font-size: 14px;">
                      Programación </a><br><br>
-			            <a href="#"
+			            <a href="https://www.neticaweb.com/secundaria-bachillerato/"
                      style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
                      Secundaria / Bachillerato </a><br>
-			            <a href="#"
+			            <a href="https://www.neticaweb.com/secundaria-bachillerato/#robotica"
                      style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; font-size: 14px;">
                      Robótica </a><br>
-			            <a href="#"
+			            <a href="https://www.neticaweb.com/secundaria-bachillerato/#programacion"
                      style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; font-size: 14px;">
                      Programación </a>
 		         </p>
