--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -69,7 +69,7 @@
            style="grid-column: 2;
                   display: grid;
                   grid-auto-columns: auto;
-                  grid-column-gap: 30px;">
+                  grid-column-gap: 2em;">
 
 	       <h6 style="font-size: 14px;
             margin-top: 20px;
